--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,22 @@
         android:theme="@style/Theme.EcomAPP"
         tools:targetApi="31">
         <activity
-            android:name=".activities.MainActivity"
+            android:name=".activities.LoginRegisterActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.EcomAPP">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".activities.ShoppingActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.EcomAPP"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
